--- a/sign.html
+++ b/sign.html
@@ -16,7 +16,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12">
-                <nav class="navbar bg-dark position-sticky top-0 z-3 col-lg-12 col-md-12 col-sm-12 w-100 " id="temi">
+                <nav class="navbar bg-dark position-sticky top-0 z-3 col-12  w-100 " id="temi">
                     <div class="container">
                         <a class="navbar-brand" href="#">
                             <img src="Images/flick.svg" alt="Bootstrap" width="90" height="35" class="ms-3">
@@ -119,7 +119,7 @@
                             </ul>
                         </div>
                         <div>
-                            <ul class="d-flex list-unstyled ps-4" id="help">
+                            <ul class="d-flex list-unstyled ps-lg-4" id="help">
                                 <a href="" class="text-decoration-none">
                                     <li class="mx-2">Help</li>
                                 </a>
