--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="p-3 w-100" id="flick" >
+    <header class="p-3 w-100 position-fixed " id="flick" >
         <div class="container-fluid d-lg-flex d-sm-flex">
             <div class="col-lg-3">
                 <img src="Images/flick.svg" alt="" width="100px" id="watch">
@@ -38,8 +38,7 @@
                     <img src="Images/Catwalk_am_Bahnhof_Zurich_Oerlikon_Peter_Arn.jpg" class="d-block w-100 " id="sky"
                         alt="...">
                     <div class="carousel-caption d-md-block ">
-                        <p class="dog"><a href="" class="power"> Catwalk am Bahnhof Zürich Oerlikon <br> by Peter
-                                Arn</a></p>
+                        <p class="dog"><a href="" class="power"> Catwalk am Bahnhof Zürich Oerlikon <br> by Peter Arn</a></p>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
