--- a/sign.html
+++ b/sign.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid ">
         <div class="row">
             <div class="col-lg-12">
                 <nav class="navbar bg-dark position-sticky top-0 z-3 col-12  w-100 " id="temi">
@@ -69,7 +69,7 @@
                                 </div>
                                 <hr>
                                 <div>
-                                    <p class="px-4">Already a Flickr member?<a href=""
+                                    <p class="px-4 text-center">Already a Flickr member?<a href=""
                                             class="text-decoration-none text-primary">Log In here.</a>
                                     </p>
                                 </div>
@@ -80,54 +80,33 @@
 
                     </div>
                     <p class="norm">033120190455 by Henry , CC BY</p>
-                    <div class="text-white d-flex" id="data">
-                        <div>
-            
-                            <a href="" class="ps-2 text-dark text-decoration-none" data-bs-toggle="dropdown"
-                                aria-expanded="false">English <img src="Images/down.png" alt=""></a>
-                            <ul class="dropdown-menu z-100">
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>English</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>Deutsch</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>繁體中文</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>Español</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>Français</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>한글</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>Italiano</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>Português</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>Tiếng Việt</li>
-                                </a>
-                                <a href="#" class="text-dark text-decoration-none">
-                                    <li>Bahasa Indonesia</li>
-                                </a>
-                            </ul>
-                        </div>
+                    <div class="text-white d-flex" id="data">                    
+                        <div class="dropup-center dropup blog">
+                        <a class="dropdown-toggle ps-lg-4 fw-semibold text-decoration-none" data-bs-toggle="dropdown"
+                            aria-expanded="false" id="blog">English</a>
+                        <ul class="dropdown-menu z-100" id="dropDownContent">
+                            <li><a class="dropdown-item" href="#">繁體中文</a></li>
+                            <li><a class="dropdown-item" href="#">Deutsch</a></li>
+                            <li><a class="dropdown-item" href="#">Español</a></li>
+                            <li><a class="dropdown-item" href="#">Français</a></li>
+                            <li><a class="dropdown-item" href="#">한글</a></li>
+                            <li><a class="dropdown-item" href="#">Italiano</a></li>
+                            <li><a class="dropdown-item" href="#">Português</a></li>
+                            <li><a class="dropdown-item" href="#">Tiếng Việt</a></li>
+                            <li><a class="dropdown-item" href="#">Bahasa Indonesia</a></li>
+                        </ul>
+                    </div>
+
                         <div>
                             <ul class="d-flex list-unstyled ps-lg-4" id="help">
                                 <a href="" class="text-decoration-none">
-                                    <li class="mx-2">Help</li>
+                                    <li class="mx-2 privacy">Help</li>
                                 </a>
                                 <a href="" class="text-decoration-none">
-                                    <li class="mx-2">Privacy</li>
+                                    <li class="mx-2 privacy">Privacy</li>
                                 </a>
                                 <a href="" class="text-decoration-none">
-                                    <li class="mx-2">Terms</li>
+                                    <li class="mx-2 privacy">Terms</li>
                                 </a>
                             </ul>
                         </div>
