--- a/login.html
+++ b/login.html
@@ -12,8 +12,8 @@
 </head>
 
 <body>
-    <nav class="navbar bg-dark">
-        <div class="container">
+    <nav class="navbar bg-dark high">
+        <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="Images/flick.svg" alt="Bootstrap" width="90" height="35" class="ms-3">
             </a>
@@ -32,7 +32,21 @@
         </p>
     </div>
     <div class="text-white d-flex" id="four">
-        <div class="eng">English <img src="Images/down.png" alt=""></div>
+        <div class="dropup-center dropup blog">
+            <a class="dropdown-toggle ps-lg-4 fw-semibold text-decoration-none" data-bs-toggle="dropdown"
+                aria-expanded="false" id="blog">English</a>
+            <ul class="dropdown-menu z-100" id="dropDownContent">
+                <li><a class="dropdown-item" href="#">繁體中文</a></li>
+                <li><a class="dropdown-item" href="#">Deutsch</a></li>
+                <li><a class="dropdown-item" href="#">Español</a></li>
+                <li><a class="dropdown-item" href="#">Français</a></li>
+                <li><a class="dropdown-item" href="#">한글</a></li>
+                <li><a class="dropdown-item" href="#">Italiano</a></li>
+                <li><a class="dropdown-item" href="#">Português</a></li>
+                <li><a class="dropdown-item" href="#">Tiếng Việt</a></li>
+                <li><a class="dropdown-item" href="#">Bahasa Indonesia</a></li>
+            </ul>
+        </div>
         <div>
             <ul class="d-flex list-unstyled" id="two">
                 <a href="" class="text-decoration-none">
