--- a/login.html
+++ b/login.html
@@ -33,7 +33,7 @@
     </div>
     <div class="text-white d-flex" id="four">
         <div class="dropup-center dropup blog">
-            <a class="dropdown-toggle ps-lg-4 fw-semibold text-decoration-none" data-bs-toggle="dropdown"
+            <a class="dropdown-toggle ps-lg-4 fw-normal text-decoration-none" data-bs-toggle="dropdown"
                 aria-expanded="false" id="blog">English</a>
             <ul class="dropdown-menu z-100" id="dropDownContent">
                 <li><a class="dropdown-item" href="#">繁體中文</a></li>
