--- a/sign.html
+++ b/sign.html
@@ -33,13 +33,13 @@
                             <div class="mx-auto w-100 phone">
                                 <div class="">
                                     <input type="text" id="floatinginput" placeholder="First name"
-                                        class="form-control px-4 mt-2 p-3">
+                                        class="form-control px-4 mt-2 p-3 ">
 
                                 </div>
                                 <div class="">
                                     <input type="text" id="floatinginput" placeholder="Last name"
                                         class="form-control px-4 mt-2 p-3 ">
-
+                              
                                 </div>
                                 <div class="">
                                     <input type="text" id="floatinginput" placeholder="Age"
@@ -69,7 +69,7 @@
                                 </div>
                                 <hr>
                                 <div>
-                                    <p class="px-4 text-center">Already a Flickr member?<a href=""
+                                    <p class="px-4 text-center">Already a Flickr member?<a href="login.html"
                                             class="text-decoration-none text-primary">Log In here.</a>
                                     </p>
                                 </div>
@@ -82,7 +82,7 @@
                     <p class="norm">033120190455 by Henry , CC BY</p>
                     <div class="text-white d-flex" id="data">                    
                         <div class="dropup-center dropup blog">
-                        <a class="dropdown-toggle ps-lg-4 fw-semibold text-decoration-none" data-bs-toggle="dropdown"
+                        <a class="dropdown-toggle ps-lg-4 fw-normal text-decoration-none" data-bs-toggle="dropdown"
                             aria-expanded="false" id="blog">English</a>
                         <ul class="dropdown-menu z-100" id="dropDownContent">
                             <li><a class="dropdown-item" href="#">繁體中文</a></li>
