--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     <a href="" class="ps-lg-4 fw-semibold blog">Terms</a>
                     <a href="" class="ps-lg-4 fw-semibold blog">Cookies</a>
                     <div class="dropup-center dropup blog">
-                        <a class="dropdown-toggle ps-lg-4 fw-semibold " data-bs-toggle="dropdown"
+                        <a class="dropdown-toggle ps-lg-4 fw-semibold text-secondary" data-bs-toggle="dropdown"
                             aria-expanded="false" id="blog">English</a>
                         <ul class="dropdown-menu z-100" id="dropDownContent">
                             <li><a class="dropdown-item" href="#">繁體中文</a></li>
